change qr code library

--- a/app.json
+++ b/app.json
@@ -36,7 +36,7 @@
         "plugins": [
             "expo-router",
             [
-                "react-native-vision-camera",
+                "expo-camera",
                 {
                     "cameraPermissionText": "$(PRODUCT_NAME) needs access to your Camera.",
                     "enableCodeScanner": true
