--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-ui-lib": "^7.20.3",
-    "react-native-vision-camera": "^4.0.1",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-camera": "~14.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
